--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,8 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "lma"
+name = "lang-model-assist"
+version = "0.1.0"
 authors = [
     {name = "Kamyar R", email = "notPublicYet@gmail.com"},
 ]
@@ -26,4 +27,4 @@ dependencies = [
     "torch>=2.3.1",
 ]
 
-dynamic = ["version"]
+# dynamic = ["version"]
