--- a/env.yml
+++ b/env.yml
@@ -14,6 +14,7 @@ dependencies:
   - pyvis>=0.3.1
   - pillow>=10.3.0
   - psutil=6.0.0
+  - transformers=4.47.1
   - pip:
     - gunicorn==22.0.0
     - pypdf>=3.0.1
