--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 
 description = "General assistant app and to form new ideas."
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.13"
 keywords = ["large language models", "machine learning", "assistant", "probability"]
 license = {file = "LICENSE"}
 classifiers = [
@@ -21,10 +21,11 @@ classifiers = [
 ]
 dependencies = [
     "requests",
-    "numpy>=2.0.0",
-    "pandas>=2.2.2",
-    "matplotlib>=3.9.1",
-    "torch>=2.3.1",
+    "numpy>=2.3.0",
+    "pandas>=2.3.0",
+    "matplotlib>=3.10.3",
+    "torch>=2.7.1",
+    "flask>=3.1.1",
 ]
 
 # dynamic = ["version"]
